--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,5 +2,14 @@
 <nav class="navbar">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><span> My</span>Blog </a>
+        <ul class="nav navbar-nav navbar-right">
+            {% if current_user.is_authenticated %}
+            <li style="color:white;padding:15px;">{{current_user.username}}</li>
+            <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+            {% else %}
+            <li><a href="{{url_for('auth.register')}}">Sign in</a></li>
+            {%endif%}
+        </ul>
     </div>
+    
 </nav>
