--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -24,6 +24,14 @@
             {% else %}
             <p> No profile picture </p>
             {% endif %}
+            <!-- display -->
+            {% if user == current_user %}
+            <form action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype="multipart/form-data">
+            
+                <input type="file" name="photo" class="form-control" required>
+                <input type="submit">
+            </form>
+            {% endif %}
         </div>
     </div>
 </div>
