--- a/app/static/CSS/index.css
+++ b/app/static/CSS/index.css
@@ -1,15 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Anek+Gujarati:wght@100;200;300;400;600&family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 /* css ruleset */
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgb(11, 10, 10);
 }
 
 /* style nabvar */
-.navbar{
-    background-color: black;
-    height: 10vh;
-}
 
 .navbar,a {
     color: white;
@@ -27,9 +25,23 @@ a:hover{
     font-size: 30px;
 }
 
+/* quotes styling */
+.quote{
+    color: rgb(222, 177, 14);
+    font-family: 'Anek Gujarati',
+    sans-serif;
+    font-family: 'Roboto Condensed',
+    sans-serif;
+    width: 40%;
+    font-size: 20px;
+    background-color: transparent;
+    border: 1px solid gray;
+    border-radius: 15px;
+    margin: 5%;
+    
+}
+
+/* img */
 img{
-    background-size: cover;
-    height: 85vh;
-    margin-top: -2%;
-    width: 100%;
+    width: 10%;
 }
