--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container form">
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
