--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,6 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#"><span class="my">My</span>Blog</a>
+            <a class="navbar-brand" href="/">Home</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
