--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,33 +1,35 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%}
 
 {% block content %}
-<div class="container">
+<div class="container profile">
     <div class="row">
-        <!-- username -->
+        <!-- displaying  Userprofile-->
         <div class="col-md-4">
-            <h2> {{user.username| capitalize}}</h2>
-            <!-- bio -->
+
+            {% if user.profile %}
+            <img src="{{url_for('static',filename=user.profile)}}" alt="" class="img-thumbnail">
+            {%else%}
+            <p>No profile picture</p>
+            {% endif %}
+
+            <h3> {{user.username| capitalize}} </h3>
+
+            <!--Displaying user bio-->
             {% if user.bio %}
             <p> {{user.bio}}</p>
-            {% else %}
+            {%else%}
             <p> {{user.username| capitalize}} has no bio </p>
             {% endif %}
+
             <!-- edit profile -->
             {% if user == current_user %}
             <a href="{{url_for('main.update_profile',name=user.username)}}">Edit profile</a>
             {% endif %}
-        </div>
-        <!-- profile -->
-        <div class="col-md-4">
-            {% if user.profile %}
-            <img src="{{url_for('static', filename = user.profile)}}" alt="" class="img-thumbnail">
-            {% else %}
-            <p> No profile picture </p>
-            {% endif %}
-            <!-- display -->
+
             {% if user == current_user %}
-            <form action="{{url_for('main.update_pic',name=user.username)}}" method="post" enctype="multipart/form-data">
-            
+            <form action="{{url_for('main.update_pic',name=user.username)}}" method="post"
+                enctype="multipart/form-data">
+
                 <input type="file" name="photo" class="form-control" required>
                 <input type="submit">
             </form>
