--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,4 +44,67 @@
         </div>
     </div>
     </div>
+    <!-- footer -->
+    <footer class="footer-distributed">
+    
+        <div class="footer-left">
+    
+            <h3>My<span>Blog</span></h3>
+    
+            <p class="footer-links">
+                <a href="#" class="link-1">Home</a>
+    
+                <a href="#">Blog</a>
+    
+                <a href="#">Profile</a>
+    
+                <a href="#">About</a>
+    
+                <a href="#">Faq</a>
+    
+                <a href="#">Contact</a>
+            </p>
+    
+            <p class="footer-about">MyBlog © 2022</p>
+        </div>
+    
+        <div class="footer-center">
+    
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>333 S. Satelite</span> Nairobi, Kenya</p>
+            </div>
+    
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+254 712 345 678</p>
+            </div>
+    
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:support@company.com">myblog@gmail.com</a></p>
+            </div>
+    
+        </div>
+    
+        <div class="footer-right">
+    
+            <p class="footer-company-about">
+                <span>About </span>
+                Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus
+                vehicula sit amet.
+            </p>
+    
+            <div class="footer-icons">
+    
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+    
+            </div>
+    
+        </div>
+    
+    </footer>
 {% endblock %}%
