--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,7 @@
             {% endfor %}
             <!-- login form -->
             {{wtf.quick_form(login_form)}}
-            <p> Don't have an account? <a href="{{url_for('auth.register')}}"> Sign Up here </a></p>
+            <p style="margin-top: -10%; color: white; font-weight: bold;"> Don't have an account? <a href="{{url_for('auth.register')}}"> Sign Up here </a></p>
         </div>
         
         <div clas="col-md-2"> </div>
